<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iCare</string>
    <string name="loading">Loading…</string>
    <string name="lblPatientAlreadyCheckedIn">Patient already Checked In</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="lbl_login">Log in</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_forgot_password">Forgot your password?</string>
    <string name="lblFirstname">First Name</string>
    <string name="lbl_middlename">Middle Name</string>
    <string name="lbl_lastname">Last Name</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_birthday">Birthday</string>
    <string name="lbl_birth_time">Birth Time</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_confirm_email">Confirm Email</string>
    <string name="lbl_role">Role</string>

    <string name="lbl_relationship">Relationship to Patient</string>
    <string name="lbl_contact_number">Contact Number</string>
    <string name="title_activity_login_signup">LoginSignupActivity</string>
    <string name="title_activity_sync_data">SyncParentDataActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_promos">PROMOS</string>
    <string name="lbl_news_feed">NEWS FEEDS</string>
    <string name="lbl_scheduler">SCHEDULER</string>
    <string name="lbl_my_dashboard">MY DASHBOARD</string>
    <string name="lbl_my_baby">MY BABY</string>
    <string name="lbl_dashboard_symptoms_tracker">SYMPTOMS TRACKER</string>
    <string name="lbl_check_in">CHECK-IN</string>
    <string name="lbl_previous_visit">PREVIOUS VISIT</string>
    <string name="lbl_patient_database">PATIENT DATABASE</string>
    <string name="lbl_patient_visits">VISITS</string>
    <string name="lbl_visit_tracker">VISIT TRACKER</string>
    <string name="lbl_patients_queue">PATIENTS QUEUE</string>
    <string name="lbl_add_user">ADD USER</string>
    <string name="lbl_add_baby">ADD BABY</string>
    <string name="lbl_growth_tracker">GROWTH TRACKER</string>
    <string name="lbl_medication_tracker">MEDICATION TRACKER</string>
    <string name="lbl_immunization_tracker">IMMUNIZATION TRACKER</string>
    <string name="lbl_clinic_visit">CLINIC VISIT</string>
    <string name="lbl_add_baby_lower">Add Baby</string>
    <string name="lbl_add_patient">ADD PATIENT</string>
    <string name="lbl_settings">SETTINGS</string>
    <string name="lbl_doctors_information">DOCTOR\'S INFORMATION</string>
    <string name="title_activity_doctor_dashboard_fragment_activity">DoctorDashboardFragmentActivity</string>
    <string name="title_activity_parent_dashboard_fragment_activity">ParentDashboardFragmentActivity</string>
    <string name="about">About</string>
    <string name="main_menu">Home</string>
    <string name="contact">Contact</string>
    <string name="about_body">Radial Menu Demo Version 1 by Arindam Nath.</string>
    <string name="contact_body">Contact Details Here!</string>
    <string name="main_body">Long press any part of the screen to bring up radial menu.</string>
    <string name="open_menu">Open Menu</string>
    <string name="normal">Normal</string>
    <string name="expandable">Expandable</string>
    <string name="close">Close</string>


    <string name="lblPatientsName">Patient\'s Name</string>
    <string name="lblAge">Age</string>
    <string name="lblAccompaniedBy">Accompanied By</string>
    <string name="lblPatientNotes">Patient Note\s</string>
    <string name="lblRelationshipToPatient">Relationship to Patient</string>
    <string name="lblPurpose">Purpose</string>
    <string name="lblTypeOfDelivery">Type of Delivery</string>
    <string name="lblAllergyRisk">Allergy Risk</string>
    <string name="lblMomsNotes">Mom\'s Notes</string>
    <string name="lblGrowthTracker">Growth Tracker</string>
    <string name="lblGrowthTrackerWeight">Weight</string>
    <string name="lblGrowthTrackerHeight">Height</string>
    <string name="lblGrowthTrackerHead">Head</string>
    <string name="lblGrowthTrackerChest">Chest</string>
    <string name="lblGrowthTrackerAbdomen">Abdomen</string>
    <string name="lblGrowthTrackerTemperature">Temperature</string>
	<string name="lblMedicine">Medicine</string>
	<string name="lblNextVisit">Next Visit</string>
    <string name="lblVaccinationsTaken">Vaccinations Taken</string>
	<string name="lblMedicationsTaken">Medications Taken</string>
	<string name="lblInstructions">Instructions</string>
    <string name="lblMyNameIs">My name is</string>
    <string name="lblIWasBorn">I was born</string>
    <string name="lblAt">at</string>
    <string name="lblIWasDeliveredBy">I was delivered by</string>
    <string name="lblMyMomGaveBirthToMeThrough">My mom gave birth to me through</string>
    <string name="lblWhenIWasBornIWeighed">When I was born I weighed</string>
    <string name="lblAndIMeasured">and I measured</string>
    <string name="lblAllergyRiskNotes"><![CDATA[When your child have allergies, his development may also suffer.\n Find out your child\'s allergy risk here ( <a href="http://stage.allergyrisktracker.com/ph/">http://stage.allergyrisktracker.com/ph</a> ).]]></string>
    <string name="lblCircumcisedOn">Circumcised on</string>
    <string name="lblEarsPiercedOn">Ears pierced on</string>
    <string name="lblDistinguishingMarks">Distinguishing marks</string>
    <string name="lblNewBornScreening">Newborn screening</string>
    <string name="lblVaccinationsGiven">Vaccinations given</string>
    <string name="lblMyMommyNameIs">My Mommy\'s name is</string>
    <string name="lblSheWorksAt">She works at</string>
    <string name="lblMyDaddyNameIs">My Daddy\'s name is</string>
    <string name="lblHeWorksAt">He works at</string>
    <string name="lblAs">as</string>
    <string name="lblHerHMOIs">Her HMO is</string>
    <string name="lblHisHMOIs">His HMO is</string>
    <string name="lblILiveAt">I live at</string>
    <string name="lblAddress1">Address 1</string>
    <string name="lblAddress2">Address 2</string>

    <!--SETTINGS-->
    <string name="lblPINOfTheDay">PIN of the day</string>
    <string name="lblGetPINOfTheDay">Get PIN of the day</string>
    <string name="lblUpdateConfiguration">Update Configuration</string>
    <string name="lblChangePassword">Change Password</string>

    <!--DOCTOR INFORMATION-->
    <string name="lblLinkDoctor">Link Doctor</string>
    <string name="lblDoctorsName">Doctor\'s Name</string>
    <string name="lblSpecialty">Specialty</string>
    <string name="lblPRCLicNo">PRC Lic No.</string>
    <string name="lblPRTNo">PRT No.</string>
    <string name="lblClinicsName">Clinic\'s Name</string>
    <string name="lblClinicAddress">Address</string>
    <string name="lblClinicSchedule">Clinic Schedule</string>
    <string name="lblDoctorContactNo">Contact No.</string>
    <string name="lblDoctorMobileNo">Mobile No.</string>
    <string name="lblClinicNotes">Clinic Notes</string>
    <string name="lblSecretarysName">Secretary\' Name</string>
    <string name="lblSecretarysContactNo">Contact No.</string>

    <!--SYMPTOM-->
    <string name="lblSymptomSubject">Subject</string>
    <string name="lblSymptomSymptoms">Symptom(s)</string>
    <string name="lblSymptomNotes">Notes</string>
    <string name="lblSymptomQuestion">Questions for Doctor in my next visit</string>
    <string name="lblSymptomAttachPhoto">Attach Photos</string>
    <string name="lblSymptomSave">Save</string>

    <string name="lblZero">0</string>
    <string name="lblKg">Kg</string>
    <string name="lblCm">Cm</string>
    <string name="lblDegreeC">\u2103</string>

    <string-array name="patientDatabaseArray">
        <item>Checkin</item>
        <item>Information</item>
        <item>History</item>
    </string-array>

    <string name="title_activity_icare_fragment">ICareFragmentActivity</string>
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="title_activity_main_fragment">MainFragmentActivity</string>
    
    <string name="title_my_patients">My Patients</string>
    <string name="title_settings">Settings</string>
    <string name="lblCheckingPIN">Checking PIN... Please wait.</string>
    <string name="lblNoAvailablePIN">No Available PIN</string>


</resources>

