<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:icare="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        android:src="@drawable/login_bg"
        android:id="@+id/bg_img"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:id="@+id/linearLayout">

        <com.fourello.icare.view.CustomTextView
            icare:fontName="VAGRoundedLight.ttf"
            icare:fontStyle="normal"
            icare:fontColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_sign_up"
            android:id="@+id/pageTitle"
            android:layout_gravity="center_horizontal"
            style="@style/text_Appearance_large_title_light"
            android:layout_marginBottom="10dp"
            android:shadowColor="@android:color/background_dark"/>

        <com.fourello.icare.view.CustomEditTextView
            icare:fontName="VAGRoundedLight.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etFirstname"
            android:drawableStart="@drawable/custom_ic_user"
            android:background="@drawable/rounded_corners"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:hint="@string/lblFirstname" />

        <com.fourello.icare.view.CustomEditTextView
            icare:fontName="VAGRoundedLight.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etLastname"
            android:drawableStart="@drawable/custom_ic_user"
            android:background="@drawable/rounded_corners"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:hint="@string/lbl_lastname" />

        <!--<com.fourello.icare.view.CustomEditTextView
            icare:fontName="VAGRoundedLight.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etRole"
            android:drawableStart="@drawable/custom_ic_user"
            android:background="@drawable/rounded_corners"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:hint="@string/lbl_role" />-->
<!--
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerRole"
            android:drawableStart="@drawable/custom_ic_user"
            android:background="@drawable/rounded_corners"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:prompt="@string/lbl_role"

            />
-->

        <com.fourello.icare.view.CustomEditTextView
            icare:fontName="VAGRoundedLight.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEmail"
            android:drawableStart="@drawable/custom_ic_email"
            android:background="@drawable/rounded_corners"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:hint="@string/lbl_email" />

        <com.fourello.icare.view.CustomEditTextView
            icare:fontName="VAGRoundedLight.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:drawableStart="@drawable/custom_ic_password"
            android:background="@drawable/rounded_corners"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:hint="@string/hint_password" />

        <com.fourello.icare.view.CustomEditTextView
            icare:fontName="VAGRoundedLight.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etConfirmPassword"
            android:drawableStart="@drawable/custom_ic_password"
            android:background="@drawable/rounded_corners"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:hint="@string/lbl_confirm_password" />

        <com.fourello.icare.view.CustomButton
            icare:fontName="VAGRoundedLight.ttf"
            icare:fontStyle="bold"
            icare:fontColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_register"
            android:id="@+id/btnSign_up"
            android:background="@drawable/custom_button"
            android:layout_gravity="center_horizontal"
            style="@style/button_appearance" />

    </LinearLayout>
</RelativeLayout>
