<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:icare="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:padding="50dp"
        android:id="@+id/loadingLayout"
        android:background="@drawable/rounded_corners_password_dialog"
        android:gravity="center">
        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge"
            />

        <com.fourello.icare.view.CustomTextView
            icare:fontName="VAGRoundedLight.ttf"
            icare:fontColor="@android:color/black"
            style="@style/text_Appearance_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/lblLoadingMessage"
            android:paddingTop="50dp"
            android:text="Syncing your Data"

            />
    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:visibility="gone"
        android:id="@+id/addBabyLayout">
        <LinearLayout
            android:layout_marginTop="5dp"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            >

            <com.fourello.icare.view.CustomTextView
                icare:fontName="VAGRoundedLight.ttf"
                icare:fontStyle="normal"
                icare:fontColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_add_baby_lower"
                android:id="@+id/pageTitle"
                android:layout_gravity="center_horizontal"
                style="@style/text_Appearance_large_title_light"
                android:layout_marginBottom="10dp"
                android:shadowColor="@android:color/background_dark"/>
            <LinearLayout
                android:padding="@dimen/patient_photo_background_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_circle_big">
                <ImageView
                    android:id="@+id/patient_photo"
                    android:contentDescription="@string/app_name"
                    android:layout_width="@dimen/patient_photo_size"
                    android:layout_height="@dimen/patient_photo_size"
                    android:scaleType="fitCenter"
                    android:clickable="true"
                    />
            </LinearLayout>
            <com.fourello.icare.view.CustomEditTextView
                icare:fontName="VAGRoundedLight.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etFirstname"
                android:drawableStart="@drawable/custom_ic_user"
                android:drawableLeft="@drawable/custom_ic_user"
                android:background="@drawable/rounded_corners"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                android:hint="@string/lblFirstname" />

            <com.fourello.icare.view.CustomEditTextView
                icare:fontName="VAGRoundedLight.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etMiddlename"
                android:drawableStart="@drawable/custom_ic_user"
                android:drawableLeft="@drawable/custom_ic_user"
                android:background="@drawable/rounded_corners"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                android:hint="@string/lbl_middlename" />

            <com.fourello.icare.view.CustomEditTextView
                icare:fontName="VAGRoundedLight.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etLastname"
                android:drawableStart="@drawable/custom_ic_user"
                android:drawableLeft="@drawable/custom_ic_user"
                android:background="@drawable/rounded_corners"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                android:hint="@string/lbl_lastname" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerGender"
                android:background="@drawable/rounded_corners_spinner"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                android:hint="@string/lbl_gender"
                android:paddingStart="60dp"
                android:paddingLeft="60dp" />

            <com.fourello.icare.widgets.DateDisplayPicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerBirthday"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                android:hint="@string/lbl_birthday"
                style="@android:style/Widget.Holo.Spinner"
                android:drawableStart="@drawable/custom_ic_spinner"
                android:drawableLeft="@drawable/custom_ic_spinner"
                android:background="@drawable/rounded_corners"
                />
            <com.fourello.icare.view.CustomButton
                icare:fontName="VAGRoundedLight.ttf"
                icare:fontStyle="bold"
                icare:fontColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_done"
                android:id="@+id/btnAddBabyDone"
                android:background="@drawable/custom_button"
                android:layout_gravity="center_horizontal"
                style="@style/button_appearance" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>