<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:icare="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        android:src="@drawable/login_bg"
        android:id="@+id/bg_img" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginRight="@dimen/login_margin"
        android:id="@+id/linearLayout">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:id="@+id/app_logo"
            android:contentDescription="app_logo"
            android:src="@drawable/app_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_weight="1" />

        <com.fourello.icare.view.CustomEditTextView
            icare:fontName="VAGRoundedLight.ttf"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/etUsername"
            android:drawableStart="@drawable/custom_ic_user"
            android:background="@drawable/rounded_corners"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:hint="@string/hint_username"
            android:layout_weight="1" />

        <com.fourello.icare.view.CustomEditTextView
            icare:fontName="VAGRoundedLight.ttf"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:drawableStart="@drawable/custom_ic_password"
            android:background="@drawable/rounded_corners"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:hint="@string/hint_password"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginTop="20dp">

            <com.fourello.icare.view.CustomButton
                icare:fontName="VAGRoundedLight.ttf"
                icare:fontStyle="bold"
                icare:fontColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_login"
                android:id="@+id/btnLogin"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                style="@style/button_appearance_login" />

            <com.fourello.icare.view.CustomButton
                icare:fontName="VAGRoundedLight.ttf"
                icare:fontStyle="bold"
                icare:fontColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_sign_up"
                android:id="@+id/btnSign_up"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                style="@style/button_appearance_signup" />
        </LinearLayout>

        <com.fourello.icare.view.CustomTextView
            icare:fontName="VAGRoundedLight.ttf"
            icare:fontStyle="italics"
            icare:fontColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_forgot_password"
            android:id="@+id/forgot_password"
            android:layout_gravity="right"
            style="@style/text_Appearance_normal_light"/>
    </LinearLayout>
</RelativeLayout>
